--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.1.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-material": "^1.0.0-beta-11",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.6"
   },
